Convert the project to Chrome Extension
Adding Swapy,
Syntaxe changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Barre latérale gauche pour les favoris principaux -->
     <div id="sidebar">
-        <div id="main-bookmarks"></div>
+        <div id="main-bookmarks" class = "container container-1"></div>
     </div>
 
     <!-- Contenu principal pour les autres favoris -->
@@ -26,9 +26,6 @@
 
         <div id="bookmark-container"></div>
     </div>
-
-    <script src="script.js"></script>
-    <script src="dragAndDrop.js"></script>
-    
+    <script type ="module" src="script.js"></script>
 </body>
 </html>
