Remove all dragAndDrop references, the library and Rework the look of the page. Column is now collapsible

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <!-- Barre latérale gauche pour les favoris principaux -->
-    <div id="sidebar">
-        <div id="main-bookmarks"></div>
+    <div id="bookmark-column">
+        <div id="bookmark-icons"></div>
     </div>
 
     <!-- Contenu principal pour les autres favoris -->
@@ -28,7 +28,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="dragAndDrop.js"></script>
     
 </body>
 </html>
