Background Images and Improve look

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <!-- Contenu principal pour les autres favoris -->
     <div id="main-content">
-        <h1>Bienvenue</h1>
+
+        <div id="clock-container">
+            <div id="time"></div>
+        </div>
 
         <!-- Google Search Bar -->
         <!-- <div id="google-search">
