--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,8 @@
         <div id="bookmark-container"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="main.js"></script>
+    <!-- <script src="script.js"></script> -->
     
 </body>
 </html>
